<resources>
    <string name="app_name">RetroArch</string>
    <string name="input_method">Input Method</string>
    <string name="file_type_icon">File type icon</string>
    <string name="optimal_settings_device">Optimal device settings</string>
    <string name="extracting_assets_please_wait_">Extracting assets, please wait …</string>
    <string name="mainmenu_title">RetroArch - Main Menu</string>
    <string name="resume_content">Load RetroArch</string>
    <string name="load_core">Core Selection</string>
    <string name="load_content">Load Content</string>
    <string name="load_content_auto">Load Content (Detect Core)</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="quit_retroarch">Quit RetroArch</string>
    <string name="select_libretro_core">Select a libretro core</string>
    <string name="refresh_rate_calibration">Refresh rate calibration</string>
    <string name="touch_screen_with_fingers">Touch the screen with your fingers for more accurate measurements.</string>
    <string name="refresh_rate_measured_to">Refresh rate measured to: %1$s Hz.</string>
    <string name="loading_gamepath">Loading [%1$s]…</string>
    <string name="current_binding">Current: %1$s</string>
    <string name="press_key_to_use">Press key to use</string>
    <string name="multiple_cores_detected">Multiple cores detected</string>
    <string name="no_cores_detected">No supported cores detected</string>
    <string name="welcome_to_retroarch">Welcome to RetroArch</string>
    <string name="welcome_to_retroarch_desc">This is your first time starting up RetroArch. RetroArch will now be preconfigured for the best possible user experience.</string>
    <string name="detect_device_msg_ouya">The ideal configuration options for your device will now be preconfigured.\n\nNOTE: For optimal performance, turn off Google Account sync, GPS and Wi-Fi in your Android settings menu.</string>
    <string name="detect_device_msg_general">The ideal configuration options for your device will now be preconfigured.\n\nNOTE: For optimal performance, turn off Google Account sync, Google Play Store auto-updates, GPS and Wi-Fi in your Android settings menu.</string>
    <string name="nvidia_shield_detected">NVidia Shield detected</string>
    <string name="game_mid_detected">GameMID detected</string>
    <string name="ouya_detected">OUYA detected</string>
    <string name="xperia_play_detected">Xperia Play detected</string>
    <string name="nexus_7_2013_detected">Nexus 7 2013 detected</string>
    <string name="no_optimal_settings">Device either not detected in list or doesn\'t have any optimal settings in our database.</string>
    <string name="load_a_core_first">Go to \'Load Core\' and select a core first.</string>
    <string name="loading_data">Loading [%1$s]…</string>
    <string name="asset_extraction">Asset Extraction</string>
    <string name="keep_cores">Keep cores</string>
    <string name="remove_cores">Remove non-GPL cores</string>
    <string name="using_os_reported_refresh_rate">Using OS-reported refresh rate of: %1$s Hz.</string>
    <string name="quit">Quit</string>
    <string name="gui_toggle">GUI toggle</string>
    <string name="menu_toggle">Menu toggle</string>
    <string name="audio_options">Audio</string>
    <string name="enable_audio">Enable audio</string>
    <string name="dynamic_rate_control">Dynamic rate control</string>
    <string name="dynamic_rate_control_desc">Enable dynamic rate control (recommended).</string>
    <string name="audio_latency">Audio latency</string>
    <string name="audio_latency_desc">Set the amount of desired audio latency. Your mileage may vary on the device you are using.</string>
    <string name="auto_audio_latency">Automatically detect audio latency</string>
    <string name="auto_audio_latency_desc">Use automatic audio latency detection. Only available for Android 4.1 and up - your mileage may vary based on the device you are using.</string>
    <string name="sixty_four_ms">64ms (Low)</string>
    <string name="ninety_six_ms">96ms (Medium)</string>
    <string name="one_twenty_eight_ms">128ms (Medium)</string>
    <string name="one_sixty_ms">160ms (High)</string>
    <string name="input_options">Input</string>
    <string name="back_behavior">Back behavior</string>
    <string name="back_behavior_desc">Select how you want the Back button to behave.</string>
    <string name="ime">IME</string>
    <string name="ime_method">Set Input Method</string>
    <string name="ime_method_desc">Sets IME to be used in-game.</string>
    <string name="config_autodetect">Configuration autodetection</string>
    <string name="config_autodetect_desc">This will attempt to preconfigure various gamepads and/or IME apps that you connect.</string>
    <string name="list_autodetected">List of autodetected devices</string>
    <string name="autodetected_pads">Configuration Autodetect - Supported Pads</string>
    <string name="icade_profile_pad_one">iCade profile Pad 1</string>
    <string name="icade_profile_pad_one_desc">Select the iCade profile to use for controller 1.</string>
    <string name="icade_profile_pad_two">iCade profile Pad 2</string>
    <string name="icade_profile_pad_two_desc">Select the iCade profile to use for controller 2.</string>
    <string name="icade_profile_pad_three">iCade profile Pad 3</string>
    <string name="icade_profile_pad_three_desc">Select the iCade profile to use for controller 3.</string>
    <string name="icade_profile_pad_four">iCade profile Pad 4</string>
    <string name="icade_profile_pad_four_desc">Select the iCade profile to use for controller 4.</string>
    <string name="debug_input_reporting">Debug input reporting</string>
    <string name="debug_input_reporting_desc">This will report keycodes on-screen generated by your input device(s). Useful for debugging.</string>
    <string name="touchscreen_overlay">Touchscreen Overlay</string>
    <string name="touchscreen_overlay_desc">Enable touchscreen overlays (WARNING: Lower-resolution overlays might be more suitable for less powerful devices).</string>
    <string name="input_overlay">Input overlay</string>
    <string name="input_overlay_desc">Sets touchscreen overlay config.</string>
    <string name="input_overlay_select">Select an input overlay</string>
    <string name="overlay_opacity">Overlay opacity</string>
    <string name="overlay_opacity_desc">Set the opacity of the touch overlay.</string>
    <string name="custom_binds">Custom Binds</string>
    <string name="player_1_custom_binds">User 1 Custom Binds</string>
    <string name="player_2_custom_binds">User 2 Custom Binds</string>
    <string name="player_3_custom_binds">User 3 Custom Binds</string>
    <string name="player_4_custom_binds">User 4 Custom Binds</string>
    <string name="up_button">Up Button</string>
    <string name="down_button">Down Button</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    <string name="a_button">A Button</string>
    <string name="b_button">B Button</string>
    <string name="x_button">X Button</string>
    <string name="y_button">Y Button</string>
    <string name="start_button">Start Button</string>
    <string name="select_button">Select Button</string>
    <string name="l1_button">L1 Button</string>
    <string name="l2_button">L2 Button</string>
    <string name="l3_button">L3 Button</string>
    <string name="r1_button">R1 Button</string>
    <string name="r2_button">R2 Button</string>
    <string name="r3_button">R3 Button</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="current_ime">Current IME</string>
    <string name="report_ime">Report IME</string>
    <string name="report_ime_desc">Reports the current IME (Input Method Editor) name.</string>
    <string name="path_options">Paths</string>
    <string name="rom_paths">ROM paths</string>
    <string name="rom_directory">ROM directory</string>
    <string name="rom_directory_desc">Sets directory where ROM browser will first browse for ROM files.</string>
    <string name="rom_directory_select">Select a ROM directory</string>
    <string name="save_files">Save files</string>
    <string name="enable_custom_dir">Enable custom directory</string>
    <string name="savefiles_custom_dir">Enables use of custom save file folder. (.srm) save files will be saved and loaded to configured directory. If not enabled, save files will reside in ROM folder.</string>
    <string name="savefile_directory">Savefile directory</string>
    <string name="savefile_directory_desc">Sets directory where to save and load game save files.</string>
    <string name="savefile_directory_select">Select a savefile directory</string>
    <string name="save_states">Save states</string>
    <string name="save_states_custom_dir">Enables use of custom save state folder. (.state) save states will be saved and loaded to configured directory. If not enabled, save states will reside in ROM folder.</string>
    <string name="save_state_directory">Save state directory</string>
    <string name="save_state_directory_desc">Sets directory where to save and load game save states.</string>
    <string name="save_state_directory_select">Select a savestate directory</string>
    <string name="system">System</string>
    <string name="system_custom_dir">Enables use of custom system folder. Cores will look for system specific files, like BIOSes, in this folder. If not enabled, it will look in the ROM folder.</string>
    <string name="system_directory">System directory</string>
    <string name="system_directory_desc">Sets directory where system files are loaded from.</string>
    <string name="system_directory_select">Select a system directory</string>
    <string name="general_options">General</string>
    <string name="config_style">Configuration style</string>
    <string name="global_config">Global configuration</string>
    <string name="global_config_desc">Enable global settings for all cores. Leave disabled if you want per-core settings.</string>
    <string name="auto_load_state">Auto load state</string>
    <string name="auto_load_state_desc">Loads an automatically created savestate (*.state.auto) at startup.</string>
    <string name="auto_save_state">Auto save state</string>
    <string name="auto_save_state_desc">Automatically saves state (*.state.auto) when exiting game.</string>
    <string name="rewinding">Rewinding</string>
    <string name="vsync">VSync</string>
    <string name="vsync_desc">When set to enabled, prevents screen tearing.</string>
    <string name="synchronization">Synchronization</string>
    <string name="threaded_video_driver">Threaded video driver</string>
    <string name="threaded_video_driver_desc">Uses a multi-threaded video driver. Is likely to improve performance at the expense of slightly more latency and jitter. Use this if you have troubles getting good video and audio.</string>
    <string name="forced_refresh_rate">Forced refresh rate (Hz)</string>
    <string name="forced_refresh_rate_desc">Force a specific refresh rate to be detected. Only set manually if calibration reports wrong refresh rate.</string>
    <string name="calibrate_refresh_rate">Calibrate refresh rate</string>
    <string name="calibrate_refresh_rate_desc">Attempts to find the true refresh rate of monitor. Updates value in \'Force refresh rate (Hz)\' option. To help ensure accuracy, make sure no intense background services are running, and avoid triggering screensaver.</string>
    <string name="set_os_reported_refresh_rate">Set OS-reported refresh rate</string>
    <string name="set_os_reported_refresh_rate_desc">Sets refresh rate equal to OS-reported value. This might not be accurate for your device.</string>
    <string name="enable">Enable</string>
    <string name="general">General</string>
</resources>