<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- IME -->
    <PreferenceCategory android:title="@string/ime" >
         <Preference
             android:key="set_ime_pref"
             android:summary="@string/ime_method_desc"
             android:title="@string/ime_method" />
    </PreferenceCategory>

    <!-- Configuration Autodetection -->
    <PreferenceCategory android:title="@string/config_autodetect" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="input_autodetect_enable"
            android:summary="@string/config_autodetect_desc"
            android:title="@string/enable"
            android:disableDependentsState="true" />
    </PreferenceCategory>

    <!-- Touchscreen Overlay -->
    <PreferenceCategory android:title="@string/touchscreen_overlay" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="input_overlay_enable"
            android:summary="@string/touchscreen_overlay_desc"
            android:title="@string/enable" />

        <Preference
            android:key="inputOverlayDirPref"
            android:summary="@string/input_overlay_desc"
            android:title="@string/input_overlay"
            android:dependency="input_overlay_enable"/>

        <com.retroarch.browser.preferences.util.SeekbarPreference
            android:summary="@string/overlay_opacity_desc"
            android:title="@string/overlay_opacity"
            android:key="input_overlay_opacity"
            android:dependency="input_overlay_enable" />
    </PreferenceCategory>

    <!-- Diagnostics -->
    <PreferenceCategory android:title="@string/diagnostics" >
        <Preference
            android:key="report_ime_pref"
            android:title="@string/report_ime"
            android:summary="@string/report_ime_desc"/>
    </PreferenceCategory>
</PreferenceScreen>
