<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <!-- General -->
        <PreferenceCategory android:title="@string/general" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="video_vsync"
                android:summary="@string/vsync_desc"
                android:title="@string/vsync" />
        </PreferenceCategory>

        <!-- Synchronization -->
        <PreferenceCategory android:title="@string/synchronization" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="video_threaded"
                android:summary="@string/threaded_video_driver_desc"
                android:title="@string/threaded_video_driver" />
            <EditTextPreference
                android:key="video_refresh_rate"
                android:numeric="decimal"
                android:summary="@string/forced_refresh_rate_desc"
                android:title="@string/forced_refresh_rate" />
            <Preference
                android:summary="@string/calibrate_refresh_rate_desc"
                android:title="@string/calibrate_refresh_rate" >
                <intent
                    android:targetClass="com.retroarch.browser.DisplayRefreshRateTest"
                    android:targetPackage="com.retroarch" />
            </Preference>
            <Preference
                android:key="set_os_reported_ref_rate_pref"
                android:summary="@string/set_os_reported_refresh_rate_desc"
                android:title="@string/set_os_reported_refresh_rate" />
        </PreferenceCategory>
    </PreferenceScreen>
